Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
ghx-label-10
Description
Impala can only modify a table via 'merge-on-read'. It raises an error if users want to modify a table that is configured with 'copy-on-write'.
We could add a backend flag to relax this restriction, i.e. enable 'merge-on-read' operations (DELETE, UPDATE, MERGE) even if the table property is 'copy-on-write'.