IMPALA-12857: Add flag to enable merge-on-read even if tables are configured with copy-on-write

Impala can only modify an Iceberg table via 'merge-on-read'. The
'iceberg_always allow_merge_on_read_operations' backend flag makes it
possible to execute 'merge-on-read' operations (DELETE, UPDATE, MERGE)
even if the table property is 'copy-on-write'.

Testing:
 - custom cluster test
 - negative E2E test

Change-Id: I3800043e135beeedfb655a238c0644aaa0ef11f4
Reviewed-on: http://gerrit.cloudera.org:8080/21578
Reviewed-by: Daniel Becker <daniel.becker@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>